Resolved margin/padding issues with flex. Custom rewind and fastforward works differently when scrren width is different. Example: When screen width is halved it works sort of well, when it's bigger, it fastforwards too much. This issue is perplexing....

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -70,6 +70,7 @@ video {
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
+  padding-left: 30px !important;
   align-content: space-evenly;
   text-align: center;
   /*grid-template-columns: auto auto auto auto auto auto;
@@ -80,9 +81,9 @@ video {
 }
 
 .grid-container1 > div {
-  width: 293px;
   padding: 10px;
-  margin: 10px auto 10px 10px;
+  width: 290px;
+  margin: 10px 10px 10px 10px;
 }
 
 .videoName {
@@ -267,7 +268,7 @@ a:focus {
 }
 
 .showMore {
-  margin-left: 20px;
+  margin-left: 40px;
   font-family: "Palatino Linotype" !important;
 }
 
